Fix NOD edit button overlap (#17311)

--- a/src/applications/appeals/10182/sass/10182-nod.scss
+++ b/src/applications/appeals/10182/sass/10182-nod.scss
@@ -90,6 +90,7 @@ dl.review {
 
     .widget-content-wrap {
       margin-top: 3rem;
+      margin-right: 0.5rem;
       width: 100%;
     }
 
